--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,16 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="navbar d-flex justify-content-around mb-5">
+      <%= link_to 'see all restaurants', restaurants_path,
+        class: 'btn btn-info' %>
+      <%= link_to '+ add restaurant', new_restaurant_path,
+        class: 'btn btn-primary' %>
+    </div>
+
+
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
